using lex when tokenising.

--- a/PL0 parser/PL0 parser.vcxproj.filters
+++ b/PL0 parser/PL0 parser.vcxproj.filters
@@ -2,5 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="parser.c" />
+    <ClCompile Include="lex.yy.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="parser.h" />
   </ItemGroup>
 </Project>
